cmake_minimum_required(VERSION 3.23)
project(C__Solutions)

set(CMAKE_CXX_STANDARD 14)

add_executable(C__Solutions
        commonPrefix.cpp
        LinkedList.cpp
        LongestCommonPrifix.cpp
        LongestPalindromicSubstring.cpp
        LongestSubString.cpp
        MedianOfTwoSortedArrays.cpp
        MergeTwoSortedLists.cpp
        MostWater.cpp
        palindrome.cpp
        RemoveDuplications.cpp
        RemoveElement.cpp
        test.cpp
        testcode.cpp
        ThreeSum.cpp
        Two_Sum.cpp
        Twosum.cpp
        ValidParentheses.cpp)
